--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
                             <!-- WRITE YOUR INTRODUCTION IN THIS AREA -->
 
-                            <p>Write a brief intro about yourself. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec.</p>    
+                            <p>My name is Desmond Ferguson and I was born in Atlanta, Ga. I worked for an non-profit in 2015 thru the beginning of January 1, 2016. I attend Dacula High School and will be graduating in the year of 2017. I am well versed in Spanish and have helped in communities centers such as the YMCA and Stone-Mountain Community Center. I have done tutoring for middle school math for South Gwinnet High School.</p>    
          
                             <p>It's a good idea to include your personal interests and hobbies as well. Commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
                          
