--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- ******HEADER****** --> 
     <header class="header">
         <div class="container">                       
-            <img class="profile-image img-responsive pull-left" src="img/profile.png" alt="James Lee" />
+            <img class="profile-image img-responsive pull-left" src="img / IMG_1610.JPG " alt="James Lee" />
             <div class="profile-content pull-left">
                 <h1 class="name">Desmond Ferguson</h1>
                 <h2 class="desc">I have been trappin since i was 6</h2>   
