--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <img class="profile-image img-responsive pull-left" src="img/IMG_1610.JPG " alt="James Lee" />
             <div class="profile-content pull-left">
                 <h1 class="name">Desmond Ferguson</h1>
-                <h2 class="desc">I have been trappin since i was 6</h2>   
+                <h2 class="desc">Biology Student</h2>   
                 <ul class="social list-inline">
                     <li><a href="#"><i class="fa fa-twitter"></i></a></li>                   
                     <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
