--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- ******HEADER****** --> 
     <header class="header">
         <div class="container">                       
-            <img class="profile-image img-responsive pull-left" src="img/IMG_1610.JPG " alt="James Lee" />
+            <img class="profile-image img-responsive pull-left" src="img/IMG_1610.JPG " alt="James Lee" width="300" height="200" />
             <div class="profile-content pull-left">
                 <h1 class="name">Desmond Ferguson</h1>
                 <h2 class="desc">Biology Major</h2>   
