--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <h1 class="name">Desmond Ferguson</h1>
                 <h2 class="desc">Biology Major</h2>   
                 <ul class="social list-inline">
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>                   
+                    <li><a href="http"><i class="fa fa-snapchat-ghost"></i></a></li>                   
                     <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                     <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                     <li><a href="#"><i class="fa fa-github-alt"></i></a></li>                                   
