--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                 <h1 class="name">Desmond Ferguson</h1>
                 <h2 class="desc">Biology Major</h2>   
                 <ul class="social list-inline">
-                    <li><a href="http"><i class="fa fa-facebook"></i></a></li>                   
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>                   
                     <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                     <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="#"><i class="fa fa-github-alt"></i></a></li>                                   
+                    <li><a href="https://github.com/"><i class="fa fa-github-alt"></i></a></li>                                   
                 </ul> 
             </div><!--//profile-->
             <!-- <a class="btn btn-cta-primary pull-right" href="http://themes.3rdwavemedia.com/" target="_blank"><i class="fa fa-paper-plane"></i> Contact Me</a> -->              
