--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <h2 class="desc">Biology Major</h2>   
                 <ul class="social list-inline">
                     <li><a href="#"><i class="fa fa-facebook"></i></a></li>                   
-                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                    <li><a href="https://plus.google.com/getstarted/getstarted?fww=1"><i class="fa fa-google-plus"></i></a></li>
                     <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                     <li><a href="https://github.com/"><i class="fa fa-github-alt"></i></a></li>                                   
                 </ul> 
