--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 
                 <aside class="testimonials aside section">
                     <div class="section-inner">
-                        <h2 class="heading">Testimonials</h2>
+                        <h2 class="heading">Why I Chose SSEP</h2>
                         <div class="content">
                             <div class="item">
                                 <blockquote class="quote">                                  
