--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                         <div class="content">
                             <div class="item">
                                 <blockquote class="quote">                                  
-                                    <p><i class="fa fa-quote-left"></i>James is an excellent software engineer and he is passionate about what he does. You can totally count on him to deliver your projects!</p>
+                                    <p><i class="fa fa-quote-left"></i>SSEP is an excllent program to learn and get ahead on future career goals and aspirations you wish to achieve. The program especially helps with my aspirations to become a neurosurgeon.</p>
                                 </blockquote>                
                                 <p class="source"><span class="name">Tim Adams</span><br /><span class="title">Curabitur commodo</span></p>                                                             
                             </div><!--//item-->
