--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                                 <blockquote class="quote">                                  
                                     <p><i class="fa fa-quote-left"></i>SSEP is an excllent program to learn and get ahead on future career goals and aspirations you wish to achieve. The program especially helps with my aspirations to become a neurosurgeon.</p>
                                 </blockquote>                
-                                <p class="source"><span class="name">Tim Adams</span><br /><span class="title">Curabitur commodo</span></p>                                                             
+                                <p class="source"><span class="name">Desmond Ferguson</span><br /><span class="title">Aspiring Surgeon</span></p>                                                             
                             </div><!--//item-->
                             
                             
