--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                         <h2 class="heading">Skills</h2>
                         <div class="content">
                             <p class="intro">
-                                Intro about your skills goes here. Keep the list lean and only show your primary skillset. You can always provide a link to your Linkedin or Coderwall profile so people can get more info there.</p>
+                              These are the skills that I have developed and perfected.</p>
                             
                             <div class="skillset">
                                
