--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                             <div class="skillset">
                                
                                 <div class="item">
-                                    <h3 class="level-title">Example<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to add more info...">Expert</span></h3>
+                                    <h3 class="level-title">Good decision maker<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to add more info...">Expert</span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="96%">
                                         </div>                                      
