--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                         <h2 class="heading">Skills</h2>
                         <div class="content">
                             <p class="intro">
-                              These are the skills that I have developed and perfected.</p>
+                              These are the skills that I have developed and perfected over time.</p>
                             
                             <div class="skillset">
                                
