--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                         <div class="content">
                             <div class="item">                      
                                 <h3 class="title"><i class="fa fa-graduation-cap"></i> Dacula High School</h3>
-                                <h4 class="university"> <span class="year">(2013-now))</span></h4>
+                                <h4 class="university"> <span class="year">(2013-2017))</span></h4>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title"><i class="fa fa-graduation-cap"></i> </h3>
