--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                                 <h4 class="university"> <span class="year">(2013-2017))</span></h4>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title"><i class="fa fa-graduation-cap"></i> </h3>
+                                <h3 class="title"></i> </h3>
                                 <h4 class="university"> <span class="year"></span></h4>
                             </div><!--//item-->
                         </div><!--//content-->
