--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 
                 <section class="projects section">
                     <div class="section-inner">
-                        <h2 class="heading">Other Projects</h2>
+                        <h2 class="heading">my level of smartness</h2>
                         <div class="content">
                             <div class="item">
                                 <h3 class="title"><a href="#">Project Title Cras Lacus</a></h3>
