--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
                         <div class="content">
                             <div class="item">
                                 <h3 class="title"><a href="#">Project Title Cras Lacus</a></h3>
+                                <img class="profile-image img-responsive pull-left" src="img/IMG_1610.JPG " alt="James Lee" width="300" height="200" />
                                 <p class="summary">Provide a brief description of your project. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatu.</p>
                                
                             </div><!--//item-->
