--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->  
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
-<head>F
+<head>
     <title>Responsive Portfolio Template for Developers</title>
     <!-- Meta -->
     <meta charset="utf-8">
@@ -128,7 +128,7 @@
                         <div class="content">
                             <div class="item">
                                 <h3 class="title"><a href="#">Project Title Cras Lacus</a></h3>
-                                <img class="profile-image img-responsive pull-left" src="img/transcript.PNG  " alt="James Lee" width="300" height="200" />
+                                <img class="profile-image img-responsive pull-middle" src="img/transcript.PNG  " alt="James Lee" width="300" height="300" />
                                 <p class="summary">Provide a brief description of your project. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatu.</p>
                                
                             </div><!--//item-->
