--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="css/bootstrap.css">   
     <!-- Plugins CSS -->
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <!--comment -->
+    <script type="text/javascript" src="js/jscharts.js"></script>
     
     <!-- github calendar css -->
     <link rel="stylesheet" href="assets/plugins/github-calendar/dist/github-calendar.css"/>
