--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <!--comment -->
     <script type="text/javascript" src="js/jscharts.js"></script>
-    
+    <div id="chartcontainer">This is just a replacement in case Javascript is not available or used for SEO purposes</div>
+    <script type="text/javascript">
+	var myData = new Array(['unit', 20], ['unit two', 10], ['unit three', 30], ['other unit', 10], ['last unit', 30]);
+	var myChart = new JSChart('chartcontainer', 'bar');
+	myChart.setDataArray(myData);
+	myChart.draw();
+</script>
     <!-- github calendar css -->
     <link rel="stylesheet" href="assets/plugins/github-calendar/dist/github-calendar.css"/>
     <!-- github acitivity css -->
