--- a/index.html
+++ b/index.html
@@ -280,13 +280,13 @@
                 
                 <aside class="list music aside section">
                     <div class="section-inner">
-                        <h2 class="heading">Favourite Music</h2>
+                        <h2 class="heading">References</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-headphones"></i> <a href="#">Etiam hendrerit urna nunc</a></li>
-                                <li><i class="fa fa-headphones"></i> <a href="#">Ut sollicitudin in mauris non auctor</a></li>
-                                <li><i class="fa fa-headphones"></i> <a href="#">Etiam hendrerit urna nunc</a></li>
-                                <li><i class="fa fa-headphones"></i> <a href="#">Duis et felis bibendum</a></li>
+                                <li> <a href="#">Lakeisha Johnson(678-563-8094)</a></li>
+                                <li> <a href="#">Tia Wilson(770-345-3444)</a></li>
+                                <li> <a href="#">Tiffany Ashford(404-564-2342)</a></li>
+                                <li> <a href="#">Steffani Curry(678-454-2342)</a></li>
                             </ul>
                         </div><!--//content-->
                     </div><!--//section-inner-->
