--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                             </div><!--//item-->
                             
                             <div class="item">
-                                <h3 class="title"> <span class="place"><a href="#">eBay</a></span> <span class="year"></span></h3>
+                                <h3 class="title"> <span class="place"><a href="#"></a></span> <span class="year"></span></h3>
                                 <p></p>
                             </div><!--//item-->
                             
