--- a/index.html
+++ b/index.html
@@ -294,11 +294,11 @@
                 
                 <aside class="list conferences aside section">
                     <div class="section-inner">
-                        <h2 class="heading">Conferences</h2>
+                        <h2 class="heading">Books</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-calendar"></i> <a href="https://developer.apple.com/wwdc/" target="_blank">WWDC 2014</a> (San Francisco)</li>
-                                <li><i class="fa fa-calendar"></i> <a href="http://hive.aigaseattle.org/">Hive</a> (Seattle)</li>
+                                <li><i class="fa fa-calendar"></i> <a href="https://developer.apple.com/wwdc/" target="_blank">The Great Gatsby</a> (San Francisco)</li>
+                                <li><i class="fa fa-calendar"></i> <a href="http://hive.aigaseattle.org/">Their Eyes were Watching God</a> (Seattle)</li>
                             </ul>
                         </div><!--//content-->
                     </div><!--//section-inner-->
