--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@
                         <h2 class="heading">Books</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-calendar"></i> <a href="https://developer.apple.com/wwdc/" target="_blank">The Great Gatsby</a></li>
-                                <li><i class="fa fa-calendar"></i> <a href="http://hive.aigaseattle.org/">Their Eyes were Watching God</a></li>
+                                <li> <a href="https://developer.apple.com/wwdc/" target="_blank">The Great Gatsby</a></li>
+                                <li> <a href="http://hive.aigaseattle.org/">Their Eyes were Watching God</a></li>
                             </ul>
                         </div><!--//content-->
                     </div><!--//section-inner-->
